--- a/.gitattributes
+++ b/.gitattributes
@@ -4,6 +4,12 @@
 * text=auto
 
 ###############################################################################
+# Convert tabs into spaces for c++ files
+###############################################################################
+*.cpp filter=tabspace
+*.hpp filter=tabspace
+
+###############################################################################
 # Set default behavior for command prompt diff.
 #
 # This is need for earlier builds of msysgit that does not have it on by
