--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -3,7 +3,7 @@ set(TEST_SOURCE_OUT ${CMAKE_BINARY_DIR}/Test/test.cpp)
 set(RESSOURCES_DIR ${PROJECT_SOURCE_DIR}/Ressources)
 
 configure_file(${TEST_SOURCE_IN} ${TEST_SOURCE_OUT} @ONLY)
-add_executable(TestFile ${TEST_SOURCE_OUT})# "${SOURCES_DIR}/glad.c")
+add_executable(TestFile ${TEST_SOURCE_OUT})
 
 set_target_properties(
     TestFile PROPERTIES
@@ -12,13 +12,12 @@ set_target_properties(
 )
 
 target_include_directories(TestFile PUBLIC ${INCLUDE_DIR})
-get_target_property(TEMP TestFile INCLUDE_DIRECTORIES)
 
 if(UNIX)
-    target_link_libraries(TestFile ${TARGET_LIB_PATH} GL pthread X11 dl Xrandr udev)
+    target_link_libraries(TestFile MyGL GL pthread X11 dl Xrandr udev)
 elseif(WIN32)
     #target_link_libraries(TestFile ${TARGET_LIB_PATH})
-    target_link_libraries(TestFile MyGL GLAD)
+    target_link_libraries(TestFile MyGL)
 else()
-    target_link_libraries(TestFile ${TARGET_LIB_PATH})
+    target_link_libraries(TestFile MyGL)
 endif()
