Modified the documentation CMakeList

--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -4,7 +4,7 @@ find_package(Sphinx REQUIRED)
 # Find all MyGL header files
 file(GLOB_RECURSE MYGL_HEADER_FILES ${INCLUDE_DIR}/MyGL/*.hpp)
 
-set(DOXYGEN_INPUT_DIR ${PROJECT_SOURCE_DIR}/Include/MyGL)
+set(DOXYGEN_INPUT_DIR ${PROJECT_SOURCE_DIR}/include/MyGL)
 set(DOXYGEN_OUTPUT_DIR ${CMAKE_CURRENT_BINARY_DIR}/docs/doxygen)
 set(DOXYGEN_INDEX_FILE ${CMAKE_CURRENT_SOURCE_DIR}/html/index.html)
 set(DOXYFILE_IN ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in)
