minor change to the main CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,8 +68,8 @@ elseif(MYGL_SHARED)
   set(MYGL_TARGETS "MyGL")
 elseif(MYGL_STATIC)
   set(MYGL_TARGETS "MyGL-static")
-else()
-  message(FATAL_ERROR "Nothing to build, enable at least one of the options MYGL_STATIC and MYGL_SHARED")
+elseif(NOT MYGL_BUILD_DOCUMENTATION)
+  message(FATAL_ERROR "Nothing to build, enable at least one of the options MYGL_STATIC, MYGL_SHARED or MYGL_BUILD_DOCUMENTATION")
 endif()
 
 set(INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
