--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ set(CXX_STANDARD_REQUIRED 14)
 set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 set(CMAKE_CXX_VISIBILITY_PRESET hidden)
 set(CMAKE_VISIBILITY_INLINES_HIDDEN YES)
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/")
 
 if(NOT APPLE)
   set(CMAKE_INSTALL_RPATH $ORIGIN)
@@ -89,15 +90,14 @@ if(MYGL_SHARED)
     PRIVATE GLAD_GLAPI_EXPORT_BUILD)
 
   target_link_libraries(MyGL
-    PUBLIC $<IF:$<TARGET_EXISTS:SDL2::SDL2>,SDL2::SDL2,SDL2>
-    PUBLIC $<IF:$<TARGET_EXISTS:SDL2::SDL2main>,SDL2::SDL2main,SDL2main>
+    PUBLIC glfw
     PUBLIC freetype
   )
 
   target_include_directories(MyGL 
     PUBLIC
-      $<BUILD_INTERFACE:${SDL2_INCLUDE_DIRS}>
-      $<INSTALL_INTERFACE:include/SDL2>
+      $<BUILD_INTERFACE:${GLFW3_INCLUDE_DIR}>
+      $<INSTALL_INTERFACE:include/GLFW3>
     PUBLIC
       $<BUILD_INTERFACE:${FREETYPE_INCLUDE_DIR_ft2build}>
       $<INSTALL_INTERFACE:include/freetype2>
@@ -123,17 +123,15 @@ if(MYGL_STATIC)
 
   target_compile_definitions(MyGL-static PUBLIC MYGL_STATIC_DEFINE)
   
-  set(SDL_TARGET $<IF:$<PLATFORM_ID:Linux>,SDL2,SDL2-static>)
   target_link_libraries(MyGL-static
-    PUBLIC $<IF:$<TARGET_EXISTS:SDL2::${SDL_TARGET}>,SDL2::${SDL_TARGET},${SDL_TARGET}>
-    PUBLIC $<IF:$<TARGET_EXISTS:SDL2::SDL2main>,SDL2::SDL2main,SDL2main>
+    PUBLIC glfw
     PUBLIC freetype
   )
 
   target_include_directories(MyGL-static
     PUBLIC
-      $<BUILD_INTERFACE:${SDL2_INCLUDE_DIRS}>
-      $<INSTALL_INTERFACE:include/SDL2>
+      $<BUILD_INTERFACE:${GLFW3_INCLUDE_DIR}>
+      $<INSTALL_INTERFACE:include/GLFW3>
     PUBLIC
       $<BUILD_INTERFACE:${FREETYPE_INCLUDE_DIR_ft2build}>
       $<INSTALL_INTERFACE:include/freetype2>
@@ -181,7 +179,7 @@ install(FILES "cmake/MyGLConfig.cmake" "${CMAKE_BINARY_DIR}/MyGLConfigVersion.cm
   DESTINATION ${MYGL_INSTALL_CMAKEDIR}
 )
 
-install(DIRECTORY ${SDL2_INCLUDE_DIRS} ${FREETYPE_INCLUDE_DIR_freetype2} ${INCLUDE_DIR}/
+install(DIRECTORY ${GLFW3_INCLUDE_DIR} ${FREETYPE_INCLUDE_DIR_freetype2} ${INCLUDE_DIR}/
   DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
 )
 
