Added an event system based upon GLFW's one, and anti-aliasing Not implemented yet : - Scancodes - Joystick events - Gamepad events

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,7 +34,7 @@ set(PROJECT_SOURCES
   "src/Camera/FixedCamera.cpp"
   #"src/Camera/FpsCamera.cpp"
   "src/Camera/MovableCamera.cpp"
-)
+  "src/Event.cpp")
 
 option(
   MYGL_BUILD_DOCUMENTATION 
