Changed the Polygon class to a normal class instead of atemplated one - Still need to change some method names

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,8 +26,9 @@ set(PROJECT_SOURCES
   "src/Animation.cpp"
   "src/Window.cpp"
   "src/Drawable/AbstractShape.cpp"
-  "src/Drawable/Font.cpp"
   "src/Drawable/Rectangle.cpp"
+  "src/Drawable/Polygon.cpp"
+  "src/Drawable/Font.cpp"
   "src/Drawable/Text.cpp"
   "src/Camera/Cam2D.cpp"
   #"src/Camera/Cam3D.cpp"
