Kept only one camera class - Removed unused classes Cam3D and FpsCamera - Merged FixedCamera, MovableCamera and Cam2D into a Camera class - Updated code which was using one of the deleted classes - Updated the documentation - Deleted the setProjection method of GLWindow

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,11 +30,7 @@ set(PROJECT_SOURCES
   "src/Drawable/Polygon.cpp"
   "src/Drawable/Font.cpp"
   "src/Drawable/Text.cpp"
-  "src/Camera/Cam2D.cpp"
-  #"src/Camera/Cam3D.cpp"
-  "src/Camera/FixedCamera.cpp"
-  #"src/Camera/FpsCamera.cpp"
-  "src/Camera/MovableCamera.cpp"
+  "src/Camera.cpp"
   "src/Event.cpp")
 
 option(
