Modifications in the external CMakeLists - Changed the find_package commands from config to module mode - added pthread to the link_libraries of the test file - Changed the main CMakeLists to install the glfw and freetype include dirs and libs only if they were not found

--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -1,6 +1,10 @@
-find_package(GLFW3 CONFIG)
+# We search for an installation of glfw3 and freetype2 on the system, for each
+# of the libraries, if it is not found then the corresponding  git submodule is
+# initialized and added as a subdirectory
 
-if(NOT GLFW3_INCLUDE_DIR)
+find_package(GLFW3)
+
+if(NOT GLFW3_FOUND OR USE_OWN_GLFW3)
   message(STATUS "Unable to find GLFW3, building it")
   message(STATUS "Downloading GLFW3's sources")
   execute_process(
@@ -8,39 +12,41 @@ if(NOT GLFW3_INCLUDE_DIR)
     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
   )
   message(STATUS "Download complete")
-  set(GLFW3_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/glfw/include")
+
+  set(GLFW3_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/glfw/include" CACHE PATH "")
   set(USE_OWN_GLFW3 True CACHE BOOL "Tells if the submodule GLFW3 should be used (if no valid GLFW3 has been found on this system)")
+  mark_as_advanced(USE_OWN_GLFW3)
   set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
   set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
   set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
 elseif(NOT EXISTS USE_OWN_GLFW3)
   set(USE_OWN_GLFW3 False CACHE BOOL "Tells if the submodule GLFW3 should be used (if no valid GLFW3 has been found on this system)")
+  mark_as_advanced(USE_OWN_GLFW3)
 endif()
 
-set(GLFW3_INCLUDE_DIR ${GLFW3_INCLUDE_DIR} CACHE PATH "Path to GLFW3 headers")
 if(USE_OWN_GLFW3)
   add_subdirectory(glfw)
 endif()
 
+find_package(Freetype)
 
-find_package(freetype2 CONFIG)
-
-if((NOT FREETYPE_INCLUDE_DIR_ft2build) OR (NOT EXISTS ${FREETYPE_INCLUDE_DIR_ft2build}))
+if(NOT FREETYPE_FOUND OR USE_OWN_FREETYPE)
   message(STATUS "Unable to find freetype2, building it")
   message(STATUS "Downloading freetype2's sources")
-
   execute_process(
     COMMAND git submodule update --init -- freetype2/
     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
   )
   message(STATUS "Download complete")
-  set(FREETYPE_INCLUDE_DIR_ft2build "${CMAKE_CURRENT_SOURCE_DIR}/freetype2/include")
+
+  set(FREETYPE_INCLUDE_DIR_ft2build "${CMAKE_CURRENT_SOURCE_DIR}/freetype2/include" CACHE PATH "")
   set(USE_OWN_FREETYPE True CACHE BOOL "Tells if the submodule FREETYPE should be used (if no valid FREETYPE has been found on this system)")
+  mark_as_advanced(USE_OWN_FREETYPE)
 elseif(NOT EXISTS USE_OWN_FREETYPE)
   set(USE_OWN_FREETYPE False CACHE BOOL "Tells if the submodule FREETYPE should be used (if no valid FREETYPE has been found on this system)")
+  mark_as_advanced(USE_OWN_FREETYPE)
 endif()
 
-set(FREETYPE_INCLUDE_DIR_ft2build ${FREETYPE_INCLUDE_DIR_ft2build} CACHE PATH "Path to freetype headers")
 if(USE_OWN_FREETYPE)
   if(UNIX AND MYGL_SHARED)
     set(BUILD_SHARED_LIBS True)
