FIxed the external CMakeLists when the dependencies are not found

--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -13,7 +13,7 @@ if(NOT GLFW3_FOUND OR USE_OWN_GLFW3)
   )
   message(STATUS "Download complete")
 
-  set(GLFW3_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/glfw/include" CACHE PATH "")
+  set(GLFW3_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/glfw/include" CACHE PATH "" FORCE)
   set(USE_OWN_GLFW3 True CACHE BOOL "Tells if the submodule GLFW3 should be used (if no valid GLFW3 has been found on this system)")
   mark_as_advanced(USE_OWN_GLFW3)
   set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
@@ -39,7 +39,7 @@ if(NOT FREETYPE_FOUND OR USE_OWN_FREETYPE)
   )
   message(STATUS "Download complete")
 
-  set(FREETYPE_INCLUDE_DIR_ft2build "${CMAKE_CURRENT_SOURCE_DIR}/freetype2/include" CACHE PATH "")
+  set(FREETYPE_INCLUDE_DIR_ft2build "${CMAKE_CURRENT_SOURCE_DIR}/freetype2/include" CACHE PATH "" FORCE)
   set(USE_OWN_FREETYPE True CACHE BOOL "Tells if the submodule FREETYPE should be used (if no valid FREETYPE has been found on this system)")
   mark_as_advanced(USE_OWN_FREETYPE)
 elseif(NOT EXISTS USE_OWN_FREETYPE)
